<resources>
    <string name="app_name">Valeo</string>
    <string name="text_empty">Записи отсутствуют</string>
    <string name="search">Поиск</string>
    <string name="delete_all">Удалить все</string>
    <string name="sort_by">Сортировка</string>
    <string name="sort_by_title">по заголвку</string>
    <string name="sort_by_date">по дате</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="note_info">Информация</string>
    <string name="album_name">noteCamera</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_navigator">NavigatorActivity</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string-array name="main_note_context">
        <item>Открыть</item>
        <item>Информация</item>
        <item>Удалить</item>
    </string-array>
</resources>
